# redeemflow

./: .gitignore  Dockerfile  HANDOFF_BOOTSTRAP.md  README.md  alembic.ini  fly.toml  partner_integration_plan.md  product_definition_partners.md  pyproject.toml  task_plan.md  update_partner_excel.py  update_platform_eval.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
adr/: 001-platform-selection.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_portfolio_charity_tables.py  003_add_multitenancy.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/billing/: page.tsx
frontend/app/calculator/: page.tsx
frontend/app/graph/: page.tsx
frontend/app/quiz/: page.tsx
frontend/app/sweet-spots/: page.tsx
frontend/components/: AlertCard.tsx  MobileCard.tsx  Navigation.tsx  PortfolioCard.tsx  ProgramSelector.tsx  RecommendationCard.tsx  ResponsiveGrid.tsx  SavingsSummary.tsx  StatBadge.tsx  SubscriptionBanner.tsx  ValueComparison.tsx
frontend/lib/: api.ts
infra/: architecture.md
landing/: Dockerfile  app.js  fly.toml  index.html  nginx.conf  server.py  style.css  task_plan.md
scripts/: ci-watch.sh  setup-branch-protection.sh
src/redeemflow/: __init__.py  app.py  ports.py
src/redeemflow/admin/: audit.py  dashboard.py  metrics.py  routes.py
src/redeemflow/billing/: __init__.py  charity_alignment.py  fake_adapter.py  models.py  ports.py  routes.py  stripe_adapter.py  webhook_processor.py
src/redeemflow/charity/: auto_donate.py  donation_flow.py  fake_adapter.py  impact.py  models.py  ports.py  routes.py  seed_data.py
src/redeemflow/community/: achievements.py  forum.py  founders_network.py  models.py  routes.py
src/redeemflow/identity/: api_keys.py  auth.py  models.py  onboarding.py  profile.py  routes.py  tenant.py
src/redeemflow/infra/: database.py  db_models.py  pg_repositories.py
src/redeemflow/middleware/: __init__.py  feature_flags.py  logging.py  rate_limit.py  security_headers.py  tenant.py  tier_limits.py
src/redeemflow/notifications/: alerts.py  email_templates.py  expiration_alerts.py  fake_adapter.py  models.py  ports.py  preferences.py  routes.py  webhook_retry.py
src/redeemflow/optimization/: __init__.py  booking_optimizer.py  budget_planner.py  business_optimizer.py  fake_adapter.py  graph.py  graph_analytics.py  hotel_transfers.py  models.py  multi_traveler.py  path_optimizer.py  personal_optimizer.py  points_calculator.py  ports.py  routes.py  seed_data.py  timing_advisor.py
src/redeemflow/portfolio/: awardwallet.py  calendar.py  expiration.py  export.py  fake_adapter.py  goals.py  household.py  models.py  ports.py  rebalance.py  routes.py  team_dashboard.py
src/redeemflow/recommendations/: card_recommender.py  engine.py  models.py  strategy_quiz.py
tests/: conftest.py
tests/contract/: __init__.py  conftest.py  openapi_snapshot.json  test_change_api.py  test_openapi_snapshot.py  test_real_adapters.py  test_stripe_adapter.py  test_stripe_webhook.py
tests/e2e/: conftest.py  test_community_flow.py  test_free_tier_flow.py  test_premium_flow.py
tests/fitness/: test_architecture.py  test_ci_gates.py  test_frontend_deps.py  test_schema_drift.py
tests/fixtures/: builders.py
tests/infrastructure/: test_alembic_migrations.py  test_ci_watch.py
tests/integration/: conftest.py  test_pg_repositories.py
tests/landing/: conftest.py  test_server.py  test_signup_api.py  test_signup_e2e.py  test_ux.py  test_visual.py
tests/smoke/: test_production.py
tests/unit/: test_achievements.py  test_admin_dashboard.py  test_admin_metrics.py  test_aggregator.py  test_alerts.py  test_api_keys.py  test_api_portfolio.py  test_architecture_fitness.py  test_audit_log.py  test_auto_donate.py  test_award_search.py  test_awardwallet.py  test_billing.py  test_booking_optimizer.py  test_budget_planner.py  test_business_optimizer.py  test_calculator_api.py  test_car_rental.py  test_card_recommender.py  test_charity_alignment.py  test_charity_directory.py  test_charity_models.py  test_charity_seed_data.py  test_community_pools.py  test_community_routes.py  test_conference_planner.py  test_donation_api.py  test_donation_flow.py  test_exchange.py  test_expiration.py  test_expiration_alerts.py  test_feature_flags.py  test_forum.py  test_forum_api.py  test_founders_api.py  test_founders_network.py  test_goals.py  test_graph.py  test_graph_analytics.py  test_health.py  (+45 more)
(+28 files in other folders)
