[project]
name = "redeemflow"
version = "0.1.0"
description = "AI-powered loyalty points optimization platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.28.0",
    "networkx>=3.4.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cache-clear -v"
markers = [
    "integration: needs external services",
    "live: needs live infrastructure",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.hatch.build.targets.wheel]
packages = ["src/redeemflow"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
