[project]
name = "redeemflow"
version = "0.2.0"
description = "AI-powered loyalty points optimization platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.28.0",
    "networkx>=3.4.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "stripe>=14.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
    "pytest-playwright>=0.7.2",
    "pillow>=12.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cache-clear -v --strict-markers"
markers = [
    "integration: needs external services or database",
    "infrastructure: tests Docker builds or Alembic migrations",
    "contract: verifies provider or API schema compliance",
    "fitness: architectural guardrail assertions",
    "smoke: post-deploy health checks against live URL",
    "e2e: end-to-end user workflow tests",
    "live: needs live infrastructure",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = [
    "S101",   # assert in tests is fine
    "S105",   # hardcoded test passwords are fine
    "S106",   # hardcoded test passwords are fine
    "S311",   # random is fine for non-security use
    "UP007",  # X | None syntax (already used throughout)
    "B008",   # Depends() in FastAPI defaults is standard pattern
    "UP042",  # StrEnum migration deferred (str, Enum pattern used throughout)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.coverage.run]
source = ["redeemflow"]
omit = ["*/infra/pg_repositories.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["src/redeemflow"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
